<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Event Notifier</string>
    <string name="no_events">No Events Yet</string>
    <string name="menu_insert">Add Event</string>
    <string name="menu_delete">Delete Event</string>
    <string name="title">Title</string>
    <string name="contact">Contacto involucrado</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="confirm">Confirm</string>
    <string name="edit_event">Edit Event</string>
    <string name="autores_1">Event Notifier</string>
    <string name="autores_2">Para programar tus actividades diarias</string>
    <string name="autores_3">Autores: Juan Santos Martin \n José Vicente Angulo Martínez</string>
    <string name="ayuda">	Con esta aplicación puedes crear recordatorios de eventos que tengas programados.\n\n\n
    						Desde la vista principal, pulsa menú para añadir un nuevo evento, para ver la ayuda o información de los autores.\n\n
    						Al pulsar en "Add Event", una vista de edición de evento se abrirá.\n\n
    						En la vista de edición de eventos, debes rellenar nombre, fecha y hora, pudiendo dejar el campo de nombre vacío,ç
    						pero los campos de fecha y hora es necesario que tengan un valor mayor que el del momento de crear el evento.\n\n
    						Para cambiar la fecha y la hora, pulsa sobre su recuadro y pon las del evento, y luego dale a set\n\n
    						Finalmente, pulsa confirm y verás que el evento se ha creado y te aparece en pantalla\n\n
    						Para borrarlo o editarlo, pulsa sobre el evento durante varios segundos y te aparecerá un menú
    						con esas dos opciones.\n\n</string>
    <string name="titulo_autores">Autores</string>
    <string name="titulo_ayuda">Ayuda</string>
    <string name="error_tiempo">No puede crear un evento con fecha anterior a día de hoy, o con día de hoy y hora ya pasada.</string>
</resources>