<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/title" />
		<EditText android:id="@+id/title" 
		  android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
		</LinearLayout>

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/contact" />
		<EditText android:id="@+id/contact" 
		  android:layout_width="wrap_content"
		  android:minWidth="300dp"
			android:layout_height="wrap_content"/>
		<Button android:id="@+id/contact_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Seleccionar Contacto"/>

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/date" />   
    <Button android:id="@+id/pickDate"        
        android:layout_width="wrap_content"        
        android:layout_height="wrap_content"/>
    
	
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/time" />
	
	<Button android:id="@+id/time"        
        android:layout_width="wrap_content"        
        android:layout_height="wrap_content"/>
	
	<Button android:id="@+id/confirm" 
	  android:text="@string/confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

</LinearLayout>